<resources>
    <string name="app_name">DeshAndDez</string>
    <string name="currency_code">AED</string>
    <string name="distance_code">KM</string>
    <string name="required">Required</string>
    <string name="email_not_valid">Email Not Valid</string>
    <string name="date_not_valid">Date Not Valid</string>
    <string name="password_length_not_valid">Password Must > 6</string>
    <string name="password_matching_not_valid">Password Not Match</string>
    <string name="ago_in_arabic">Since</string>
    <string name="min_ago">Minutes ago</string>
    <string name="hours_ago">Hours ago</string>
    <string name="days_ago">Days ago</string>
    <string name="just_now">just now</string>
    <string name="a_min_ago">A minute ago</string>
    <string name="yesterday">yesterday</string>
    <string name="hour_ago">An hour ago</string>
    <string name="work_hours">Work Hours</string>
    <string name="birthdate">Birthdate</string>
    <string name="let_s_sign_you_in">Let\'s sign you in</string>
    <string name="input_your_info_to_login_to_start_work_and_get_money">Enter your information to log in, start working, and earn money</string>
    <string name="forget_password">Forget Password</string>
    <string name="question_sign">\?</string>
    <string name="login">Login</string>
    <string name="please_enter_your_phone_number_you_will_receive_a_code_to_create_a_new_password">Please enter your Phone Number. You will receive a code to create a new password.</string>
    <string name="confirm_phone">Confirm Phone</string>
    <string name="edit">Edit</string>
    <string name="resend_code">Resend Code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="continue_">Continue</string>
    <string name="log_in_or_sign_up">Log In Or Sign Up</string>
    <string name="log_in_if_you_have_an_account_or_sign_up_to_create_an_account">Log in if you have an account or sign up to create an account.</string>
    <string name="join">Join</string>
    <string name="welcome_back">Welcome Back..!</string>
    <string name="login_your_account">Login your account</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_your_data_to_be_able_to_request">Enter your data to be able to request</string>
    <string name="surname">Surname</string>
    <string name="company_name">Company Name</string>
    <string name="join_now">Join Now</string>
    <string name="please_enter_your_email_to_recover_your_password">Please enter your email to recover your password</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_code_you_got_on_your_mobile_number">Enter the code you got on your mobile number</string>
    <string name="did_not_receive_code">Didn\'t receive code?</string>
    <string name="verify">Verify</string>
    <string name="create_a_new_password">Create a new password</string>
    <string name="please_enter_a_new_password">Please enter a new password</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="please_enter_a_numeric_value">Please enter a numeric value.</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address.</string>
    <string name="please_enter_a_valid_phone_number">Please enter a valid phone number.</string>
    <string name="password_must_contain_at_least_x_characters_including_uppercase_lowercase_numeric_and_special_characters">Password must contain at least 6 characters</string>
    <string name="please_enter_a_valid_date_in_the_format_format">Please enter a valid date in the format {format}.</string>
    <string name="confirmation_does_not_match_field_name">Confirmation does not match {field name}.</string>
    <string name="please_select_at_least_one_option">Please select at least one option.</string>
    <string name="value_should_be_between_min_and_max">Value should be between {min} and {max}.</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="change_language">Change Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_app">About App</string>
    <string name="share_app">Share App</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_email">Change Email</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="shipments">Shipments</string>
    <string name="enter_your_new_phone_number">Enter your new phone number</string>
    <string name="you_are_about_to_change_your_phone_number_20_28">You are about to change\n your phone number <font color='#00B2F0'>+20*********28</font></string>
    <string name="enter_your_new_email_address">Enter your new email address</string>
    <string name="you_are_about_to_change_your_email_no_gmail_com">You are about to change\n your email <font color='#00B2F0'>no*******@gmail.com</font></string>
    <string name="please_enter_your_code_to_verify_to_email_address">Please Enter Your Code To\n Verify To Email Address</string>
    <string name="otp">OTP</string>
    <string name="save_changes">Save Changes</string>
    <string name="requests">Requests</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="how_can_we_help_you">How Can We Help You ?</string>
    <string name="contact_us_now_our_team_will_get_back_to_you_in_a_short_time">Contact us now! Our team will get\n back to you in a short time.</string>
    <string name="current_password">Current Password</string>
    <string name="are_you_sure_you_want_to_logout_this_account">Are you sure you want to logout\n this account?</string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="no_results_found">No results found</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="destination_address">Destination Address</string>
    <string name="start">Start</string>
    <string name="choose">Choose</string>
    <string name="address">Address</string>
    <string name="package_info">Package Info</string>
    <string name="select_truck">Select Truck</string>
    <string name="step_1">step 1</string>
    <string name="step_2">step 2</string>
    <string name="step_3">step 3</string>
    <string name="pickup_date_time"><![CDATA[Pickup (Date & Time)]]></string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="category">Category</string>
    <string name="package_type">Package Type</string>
    <string name="description">Description</string>
    <string name="destination_location">Destination Location</string>
    <string name="destination_contact_info">Destination Contact Info</string>
    <string name="pickup_contact_info">Pickup Contact Info</string>
    <string name="mark_all_as_read">Mark All As Read</string>
    <string name="request_details">Request Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="about_package">About Package</string>
    <string name="drivers">Drivers</string>
    <string name="driver_info">Driver Info</string>
    <string name="skip">Skip</string>
    <string name="select_at_least_one_truck">Select at least one truck</string>
    <string name="select_pickup_date">Select pickup date</string>
    <string name="you_must_write_a_description">You must write a description</string>
    <string name="select_pick_up_location">Select pick up location</string>
    <string name="select_destination_location">Select destination location</string>
    <string name="done">Done</string>
    <string name="track_trip">Track Trip</string>
    <string name="package_status">Package Status</string>
    <string name="last_updated">Last updated:</string>
    <string name="are_you_sure_you_want_mark_all_as_read">Are you sure you want mark all as read ?</string>
    <string name="yes_mark_all">Yes,Mark All</string>
    <string name="empty_notifications">Empty Notifications</string>
    <string name="passwords_not_matched">Passwords not matched</string>
    <string name="password_has_been_changed">Password has been changed</string>
    <string name="email_address_has_been_changed">Email address has been changed</string>
    <string name="completed">Completed</string>
    <string name="running">Running</string>
    <string name="canceled">Canceled</string>
    <string name="requested">Requested</string>
    <string name="share_via">Share via</string>
    <string name="session_expire">Session Expire</string>
    <string name="you_need_to_login_to_continue">You need to login to continue</string>
    <string name="are_you_sure_you_want_to_cancel_this_request">Are you sure you want to cancel this request</string>
    <string name="yes_cancel">Yes, Cancel</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="welcome">Welcome ...!</string>
    <string name="enter_your_registered_data_to_complete_the_login_process">Enter your registered data to complete the login process</string>
    <string name="email">Email</string>
    <string name="ex_mail_mail_com">Ex:mail@mail.com</string>
    <string name="ex_address">Ex:develop web</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="log_in">Log in</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="google">Google account</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile_photo">Profile photo</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="are_you_a_seller">Are you a vendor ?</string>
    <string name="or_create_an_account_with">Or create an account with</string>
    <string name="choose_photo">Choose photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_should_be_at_least_6_characters_or_digits">Password should be at least 6 characters or digits</string>
    <string name="forgot_password2">Forgot password ...!</string>
    <string name="please_enter_your_registered_email_to_send_the_verification_code">Please enter your registered email to send the verification code.</string>
    <string name="previous">Previous</string>
    <string name="phone_number">Phone number</string>
    <string name="account_verification">Account verification</string>
    <string name="next">Next</string>
    <string name="details">Details</string>
    <string name="test_service_description">Coordinating research written in English for scientific colleges</string>
    <string name="test_provider_name">Mohamed</string>
    <string name="test_order_status_text">Waiting</string>
    <string name="test_time_ago">36 min ago</string>
    <string name="personal_identification">Personal identification</string>
    <string name="email_address">Email address</string>
    <string name="the_account_is_not_verified">The account is not verified</string>
    <string name="service_address">Service address</string>
    <string name="sub_category">Sub category</string>
    <string name="service_description">Service description</string>
    <string name="write_here">Write here</string>
    <string name="confirm_and_add">Confrim and add</string>
</resources>