<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">


            <TextView
                style="@style/MainTextRegular"
                android:drawableStart="@drawable/verification_icon"
                android:text="@string/personal_identification"
                android:drawablePadding="@dimen/_8sdp"
                android:paddingVertical="@dimen/_5sdp"/>
            <TextView
                style="@style/MainTextRegular"
                android:drawableStart="@drawable/verification_icon"
                android:text="@string/phone_number"
                android:drawablePadding="@dimen/_8sdp"
                android:paddingVertical="@dimen/_5sdp"/>
            <TextView
                style="@style/MainTextRegular"
                android:drawableStart="@drawable/verification_icon"
                android:text="@string/email_address"
                android:drawablePadding="@dimen/_8sdp"
                android:paddingVertical="@dimen/_5sdp"/>
            <TextView
                style="@style/MainTextRegular"
                android:text="@string/the_account_is_not_verified"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingVertical="@dimen/_5sdp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_service_button"
                style="@style/ButtonOutlinePrimary"
                android:layout_width="match_parent"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_gravity="center"
                android:text="@string/account_verification"
                android:textSize="@dimen/_11ssp"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>