<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:paddingHorizontal="@dimen/_10sdp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/provider_imageview"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:scaleType="fitXY"
        android:src="@drawable/user_image_for_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/_24sdp" />

    <TextView
        android:id="@+id/provider_name_textview"
        style="@style/MainTextRegular"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:text="@string/test_provider_name"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/provider_imageview"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/service_textview"
        style="@style/SecondaryTextRegular"
        android:gravity="start"
        android:layout_width="0dp"
        android:text="@string/test_service_description"
        android:textAlignment="viewStart"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/provider_name_textview"
        app:layout_constraintTop_toBottomOf="@id/provider_name_textview" />



    <LinearLayout
        android:id="@+id/status_linearlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/purchase_item_status_background"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@id/time_textview"
        app:layout_constraintEnd_toStartOf="@id/details_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_textview">

        <TextView
            android:id="@+id/status_textview"
            style="@style/SecondaryTextRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/test_order_status_text"
            android:textAlignment="viewStart"
            android:textSize="@dimen/_11sdp" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            style="@style/UnActiveProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:progress="70" />
    </LinearLayout>

    <TextView
        android:id="@+id/details_textview"
        style="@style/PrimaryTextRegular"
        android:layout_height="0dp"
        android:background="@drawable/round_primary_light_background"
        android:gravity="center"
        android:textSize="@dimen/_10ssp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="@string/details"
        app:layout_constraintBottom_toBottomOf="@id/status_linearlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/status_linearlayout" />


    <TextView
        android:id="@+id/time_textview"
        style="@style/MainTextRegular"
        android:layout_marginVertical="@dimen/_8sdp"
        android:gravity="start"
        android:text="@string/test_time_ago"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@id/line_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_linearlayout" />


    <TextView
        android:id="@+id/price_textview"
        style="@style/MainTextBold"
        android:gravity="start"
        android:text="20 $"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/time_textview"
        />


    <View
        android:id="@+id/line_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@color/background_color_secondary"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
